--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Click==7.0
 dnspython==1.16.0
 Flask==1.0.2
+Flask-Cors==3.0.7
 flask-mongoengine==0.9.5
 Flask-PyMongo==2.2.0
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
